tests/toylang/neg/001163_mutation.toylang
program a = { int if a then sleep; } .
